Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3680

Reset the file offset after failed cache reads

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.6.0
    • Impala 2.7.0, Impala 2.6.2
    • Backend
    • None

    Description

      Currently we don't reset the file read offset if ZCR fails. Due to this, when we switch to the normal read path, we hit the eosr of the scan-range even before reading the expected data length. This results in re-issuing the whole set of scan ranges and hence a severe
      performance hit.

      This has been observed while debugging IMPALA-3679, where zero-copy reads don't work with encryption zones. However this situation can apply to any general case where the ZCRs fail.

      Attachments

        Activity

          People

            bharathv Bharath Vissapragada
            bharathv Bharath Vissapragada
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: